--- a/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/ListeVendeurs.cshtml
@@ -98,6 +98,7 @@
                                             <td>@Html.DisplayFor(modelItem => item.Commande.MontantTotAvantTaxes)</td>
                                             <td>
                                                 <a asp-action="FraudeV" class="btn btn-danger" asp-route-id="@item.Vendeur.NoVendeur">Fraude</a>
+                                                <a asp-action="InactifV" class="btn btn-warning" asp-route-id="@item.Vendeur.NoVendeur">Inactif</a>
                                                 @if (item.Commande == null )
                                                 {
                                                     <a asp-action="Taux" class="btn btn-success"  asp-route-id="@item.Vendeur.NoVendeur">Taux Redevance</a>                                                   
