--- a/Projet Web Commerce/Views/PPGestionnaires/InactifV.cshtml
+++ b/Projet Web Commerce/Views/PPGestionnaires/InactifV.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Projet_Web_Commerce.Models.PPVendeurs
 
-<h2>Confirmez vous voulez que l'utilisateur confirme à nouveau son compte </h2>
+<h2>Confirmation que vous voulez rendre ce compte inactif </h2>
 
 <p>Compte de @Model.AdresseEmail</p>
 
-<form asp-action="FraudeV" method="post">
+<form asp-action="InactifV" method="post">
     <input type="hidden" name="id" value="@Model.NoVendeur" />
     <button type="submit" class="btn btn-danger">Confirmer le chagment</button>
     <a href="@Url.Action("ListeVendeurs")" class="btn btn-secondary">Annuler</a>
